k8s/kong-ingress-controller/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
        - containerPort: 16686
          name: webui
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  selector:
    app: jaeger
  type: ClusterIP
  ports:
  - name: webui
    port: 16686
    targetPort: 16686
#  - name: http-collector
#    port: 14268
#    targetPort: 14268
#  - name: agent-compact
#    port: 5775
#    targetPort: 5775
#    protocol: UDP
#  - name: agent-binary
#    port: 6831
#    targetPort: 6831
#    protocol: UDP
#  - name: agent-thrift
#    port: 6832
#    targetPort: 6832
#    protocol: UDP
#  - name: config
#    port: 5778
#    targetPort: 5778
#  - name: zipkin
#    port: 9411
#    targetPort: 9411
#  - name: admin
#    port: 14269
#    targetPort: 14269
#  - name: oltp1
#    port: 4317
#    targetPort: 4317
  - name: oltp2
    port: 4318
    targetPort: 4318
